--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -5,7 +5,7 @@ html, body {
 }
 html{font-size: 20px;}
 body{font-size: 14px; line-height: 1.6;}
-img{max-width: 100%;}
+img{max-width: 100%; border:none;}
 /*
   http://www.css88.com/book/css/ 
   弹性布局===================
